--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       TZ: Asia/Tashkent
       POSTGRES_URL: host=postgres user=$POSTGRES_USER password=$POSTGRES_PASSWORD dbname=$POSTGRES_DB port=$POSTGRES_INNER_PORT sslmode=disable
-      GRPC_PORT: $GRPC_PORT
+      GRPC_ADDR: $GRPC_HOST:$GRPC_PORT
 networks:
   bot_services:
     external: true
